// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`corpus: app-framework > soft metrics 1`] = `
{
  "bends": 20,
  "crossings": 9,
}
`;

exports[`corpus: assistant > soft metrics 1`] = `
{
  "bends": 19,
  "crossings": 6,
}
`;

exports[`corpus: compute > soft metrics 1`] = `
{
  "bends": 29,
  "crossings": 11,
}
`;

exports[`corpus: echo > soft metrics 1`] = `
{
  "bends": 25,
  "crossings": 6,
}
`;

exports[`corpus: edge > soft metrics 1`] = `
{
  "bends": 30,
  "crossings": 17,
}
`;

exports[`corpus: pipeline > soft metrics 1`] = `
{
  "bends": 11,
  "crossings": 0,
}
`;
